# vkutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.c
example/shader/: post.frag  simple.vert
include/vkutils/: vkutils.h
run/: CMakeLists.txt  basic_cube.c  build.bat  build.sh  postprocessing_cube.c  vkuTestBasicCube  vkuTestPostProcessingCube
run/shader/: post.vert  post_frag.spv  post_vert.spv  simple.frag  simple_frag.spv  simple_vert.spv  staticpost.frag  staticpost_frag.spv
src/: vkutils.c  vkutils.h
